--- a/cx.html
+++ b/cx.html
@@ -1341,7 +1341,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#CXLIBVERSION"
-    title="CXLIBVERSION* = &quot;0.9.2&quot;"><wbr />CXLIBVERSION</a></li>
+    title="CXLIBVERSION* = &quot;0.9.3&quot;"><wbr />CXLIBVERSION</a></li>
   <li><a class="reference" href="#termred"
     title="termred* = getfg(fgRed)"><wbr />termred</a></li>
   <li><a class="reference" href="#termgreen"
@@ -2098,12 +2098,12 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <p class="module-desc"><blockquote><p><p>Library     : cx.nim</p>
 <p>Status      : stable</p>
 <p>License     : MIT opensource</p>
-<p>Version     : 0.9.2</p>
+<p>Version     : 0.9.3</p>
 <p>ProjectStart: 2015-06-20</p>
-<p>Compiler    : Nim 0.12.0 dev</p>
+<p>Compiler    : Nim 0.12.1 dev</p>
 <p>OS          : Linux</p>
 <p>Description :</p>
-<blockquote><p><p>cx.nim is a public library with a collection of simple procs and templates</p>
+<blockquote><p><p>cx.nim is a collection of simple procs and templates</p>
 <p>for easy colored display in a linux terminal , date handling and more</p>
 <p>some procs may mirror functionality found in other moduls for convenience</p>
 </p></blockquote>
@@ -2419,7 +2419,7 @@ check execution timing with one line see doFinish
 <div class="section" id="10">
 <h1><a class="toc-backref" href="#10">Consts</a></h1>
 <dl class="item">
-<dt id="CXLIBVERSION"><a name="CXLIBVERSION"></a><pre><span class="Identifier">CXLIBVERSION</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;0.9.2&quot;</span></pre></dt>
+<dt id="CXLIBVERSION"><a name="CXLIBVERSION"></a><pre><span class="Identifier">CXLIBVERSION</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;0.9.3&quot;</span></pre></dt>
 <dd>
 
 
@@ -4788,7 +4788,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-11-12 21:34:28 UTC</small>
+        <small>Made with Nim. Generated: 2015-11-16 22:32:35 UTC</small>
       </div>
     </div>
   </div>
