--- a/cx.html
+++ b/cx.html
@@ -1794,6 +1794,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="hline*(n: int = tw; col: string = white)"><wbr />hline</a></li>
   <li><a class="reference" href="#hlineLn,int,string"
     title="hlineLn*(n: int = tw; col: string = white)"><wbr />hline<wbr />Ln</a></li>
+  <li><a class="reference" href="#unquote,string"
+    title="unquote*(s: string): string"><wbr />unquote</a></li>
   <li><a class="reference" href="#cleanScreen,"
     title="cleanScreen*()"><wbr />clean<wbr />Screen</a></li>
   <li><a class="reference" href="#centerPos,string"
@@ -1908,6 +1910,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <li><a class="reference" href="#printBigLetters,string,string,string,int,int,bool"
     title="printBigLetters*(aword: string; fgr: string = yellowgreen; bgr: string = black;
                  xpos: int = 1; k: int = 7; fun: bool = false)"><wbr />print<wbr />Big<wbr />Letters</a></li>
+  <li><a class="reference" href="#printNimSxR,seq[string],string,int"
+    title="printNimSxR*(nimsx: seq[string]; col: string = yellowgreen; xpos: int = 1)"><wbr />print<wbr />Nim<wbr />Sx<wbr />R</a></li>
   <li><a class="reference" href="#printSlimNumber,string,string,string,int"
     title="printSlimNumber*(anumber: string; fgr: string = yellowgreen; bgr: string = black;
                  xpos: int = 1)"><wbr />print<wbr />Slim<wbr />Number</a></li>
@@ -3542,6 +3546,13 @@ forward declaration
 forward declaration
 
 </dd>
+<dt id="unquote"><a name="unquote,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">unquote</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
+<dd>
+<p>unquote</p>
+<p>remove any quotes from a string </p>
+
+
+</dd>
 <dt id="cleanScreen"><a name="cleanScreen,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">cleanScreen</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>cleanScreen</p>
@@ -4078,6 +4089,16 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <p>element colored individually</p>
 <p>k parameter specifies character distance reasonable values are 7,8,9,10 . Default = 7</p>
 <p>also note that depending on terminal width only a limited number of chars can be displayed</p>
+
+
+</dd>
+<dt id="printNimSxR"><a name="printNimSxR,seq[string],string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printNimSxR</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">nimsx</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printNimSxR</p>
+<p>prints large Letters or a word which have been predefined</p>
+<p>see values of nimsx1 and nimsx2 above</p>
+<p>allows x positioning</p>
+<p>in your calling code arrange that most right one is printed first </p>
 
 
 </dd>
@@ -4764,7 +4785,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-11-22 22:07:15 UTC</small>
+        <small>Made with Nim. Generated: 2015-11-23 20:26:07 UTC</small>
       </div>
     </div>
   </div>
