--- a/cx.html
+++ b/cx.html
@@ -1821,8 +1821,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="dlineLn*(n: int = tw; lt: string = &quot;-&quot;; col: string = termwhite)"><wbr />dline<wbr />Ln</a></li>
   <li><a class="reference" href="#decho,int"
     title="decho*(z: int = 1)"><wbr />decho</a></li>
-  <li><a class="reference" href="#sleepy,float"
-    title="sleepy*(secs: float)"><wbr />sleepy</a></li>
+  <li><a class="reference" href="#sleepy,T"
+    title="sleepy*[T: float | int](secs: T)"><wbr />sleepy</a></li>
   <li><a class="reference" href="#printCenter,string,string,string"
     title="printCenter*(astring: string; fgr: string = termwhite; bgr: string = termblack;
              fitLine = true)"><wbr />print<wbr />Center</a></li>
@@ -3672,7 +3672,7 @@ forward declaration
 
 
 </dd>
-<dt id="sleepy"><a name="sleepy,float"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sleepy</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">secs</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span></pre></dt>
+<dt id="sleepy"><a name="sleepy,T"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sleepy</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Operator">|</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">secs</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>sleepy</p>
 <p>imitates sleep but in seconds</p>
@@ -4796,7 +4796,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-11-25 21:04:28 UTC</small>
+        <small>Made with Nim. Generated: 2015-11-26 18:47:04 UTC</small>
       </div>
     </div>
   </div>
