--- a/cx.html
+++ b/cx.html
@@ -4106,7 +4106,7 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <p>element colored individually</p>
 <p>k parameter specifies character distance reasonable values are 7,8,9,10 . Default = 7</p>
 <p>also note that depending on terminal width only a limited number of chars can be displayed</p>
-<blockquote><p>printBigLetters(&quot;ABABABA####RR&quot;,xpos = 1) printBigLetters(&quot;#&quot;,xpos = 1)   # the '#' char is used to denote a blank space or to overwrite</p></blockquote>
+<blockquote><p>printBigLetters(&quot;ABA###RR#3&quot;,xpos = 1) printBigLetters(&quot;#&quot;,xpos = 1)   # the '#' char is used to denote a blank space or to overwrite</p></blockquote>
 
 
 </dd>
@@ -4803,7 +4803,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-11-28 21:23:23 UTC</small>
+        <small>Made with Nim. Generated: 2015-11-28 21:31:27 UTC</small>
       </div>
     </div>
   </div>
