--- a/cx.html
+++ b/cx.html
@@ -4106,8 +4106,8 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <p>element colored individually</p>
 <p>k parameter specifies character distance reasonable values are 7,8,9,10 . Default = 7</p>
 <p>also note that depending on terminal width only a limited number of chars can be displayed</p>
-<blockquote><p>printBigLetters(&quot;ABA###RR#3&quot;,xpos = 1) printBigLetters(&quot;#&quot;,xpos = 1)   # the '#' char is used to denote a blank space or to overwrite</p></blockquote>
-
+<pre class = "listing"><span class="Identifier">printBigLetters</span><span class="Punctuation">(</span><span class="StringLit">&quot;ABA###RR#3&quot;</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="DecNumber">1</span><span class="Punctuation">)</span>
+<span class="Identifier">printBigLetters</span><span class="Punctuation">(</span><span class="StringLit">&quot;#&quot;</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="DecNumber">1</span><span class="Punctuation">)</span>   <span class="Comment"># the '#' char is used to denote a blank space or to overwrite</span></pre>
 
 </dd>
 <dt id="printNimSxR"><a name="printNimSxR,seq[string],string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printNimSxR</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">nimsx</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
@@ -4803,7 +4803,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-11-28 21:31:27 UTC</small>
+        <small>Made with Nim. Generated: 2015-11-28 21:36:17 UTC</small>
       </div>
     </div>
   </div>
