--- a/cx.html
+++ b/cx.html
@@ -4115,7 +4115,7 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <p>printNimSxR</p>
 <p>prints large Letters or a word which have been predefined</p>
 <p>see values of nimsx1 and nimsx2 above</p>
-<p>allows x positioning</p>
+<pre class = "listing"><span class="Identifier">printNimSxR</span><span class="Punctuation">(</span><span class="Identifier">nimsx</span><span class="Punctuation">)</span></pre><p>allows x positioning</p>
 <p>in your calling code arrange that most right one is printed first </p>
 
 
@@ -4803,7 +4803,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-11-29 14:15:56 UTC</small>
+        <small>Made with Nim. Generated: 2015-11-29 14:36:50 UTC</small>
       </div>
     </div>
   </div>
