--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1254,6 +1254,10 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="buildStockString*(apf: Portfolio): string"><wbr />build<wbr />Stock<wbr />String</a></li>
   <li><a class="reference" href="#buildStockString,seq[Stocks]"
     title="buildStockString*(adf: seq[Stocks]): string"><wbr />build<wbr />Stock<wbr />String</a></li>
+  <li><a class="reference" href="#showCurrentIndexes,seq[Stocks],int"
+    title="showCurrentIndexes*(adf: seq[Stocks]; xpos: int = 1)"><wbr />show<wbr />Current<wbr />Indexes</a></li>
+  <li><a class="reference" href="#showCurrentIndexes,string,int"
+    title="showCurrentIndexes*(idxs: string; xpos: int = 1)"><wbr />show<wbr />Current<wbr />Indexes</a></li>
   <li><a class="reference" href="#showCurrentIDX,seq[Stocks],int"
     title="showCurrentIDX*(adf: seq[Stocks]; xpos: int = 1)"><wbr />show<wbr />Current<wbr />IDX</a></li>
   <li><a class="reference" href="#showCurrentIDX,string,int"
@@ -1568,10 +1572,29 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 
 
 </dd>
-<dt id="showCurrentIDX"><a name="showCurrentIDX,seq[Stocks],int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showCurrentIDX</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adf</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Stocks</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dt id="showCurrentIndexes"><a name="showCurrentIndexes,seq[Stocks],int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showCurrentIndexes</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adf</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Stocks</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
 <dd>
 <p>showCurrentIndexes</p>
-<p>callable display routine for currentIndexes with a pool object passed in </p>
+<p>callable display routine for currentIndexes with a pool object passed in</p>
+<p>wide view </p>
+
+
+</dd>
+<dt id="showCurrentIndexes"><a name="showCurrentIndexes,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showCurrentIndexes</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">idxs</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dd>
+<p>showCurrentIndexes</p>
+<p>callable display routine for currentIDX with a string of format IDX1+IDX2+IDX3 ..</p>
+<p>passed in . Note this will use big slim letters to display inex value</p>
+<p>wide view</p>
+<pre class = "listing"><span class="Identifier">showCurrentIDX</span><span class="Punctuation">(</span><span class="StringLit">&quot;^HSI+^GDAXI+^FTSE+^NYA&quot;</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="DecNumber">5</span><span class="Punctuation">)</span></pre><p>xpos allows x positioning</p>
+
+
+</dd>
+<dt id="showCurrentIDX"><a name="showCurrentIDX,seq[Stocks],int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showCurrentIDX</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adf</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Stocks</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">discardable</span><span class="Other">.}</span></pre></dt>
+<dd>
+<p>showCurrentIDX</p>
+<p>callable display routine for currentIndexes with a pool object passed in</p>
+<p>compact view </p>
 
 
 </dd>
@@ -1580,6 +1603,7 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 <p>showCurrentIDX</p>
 <p>callable display routine for currentIDX with a string of format IDX1+IDX2+IDX3 ..</p>
 <p>passed in . Note this will use big slim letters to display inex value</p>
+<p>compact view</p>
 <pre class = "listing"><span class="Identifier">showCurrentIDX</span><span class="Punctuation">(</span><span class="StringLit">&quot;^HSI+^GDAXI+^FTSE+^NYA&quot;</span><span class="Punctuation">,</span><span class="Identifier">xpos</span> <span class="Operator">=</span> <span class="DecNumber">5</span><span class="Punctuation">)</span></pre><p>xpos allows x positioning</p>
 
 
@@ -1588,7 +1612,7 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 <dd>
 <p>showCurrentStocks</p>
 <p>callable display routine for currentStocks with Portfolio object passed in</p>
-<p>wide display style</p>
+<p>wide view</p>
 <pre class = "listing"><span class="Identifier">showCurrentStocks</span><span class="Punctuation">(</span><span class="Identifier">myAccount</span><span class="Operator">.</span><span class="Identifier">pf</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span><span class="Punctuation">)</span></pre><p>This means get all stock codes of the first portfolio in myAccount</p>
 <p>Note : Yahoo servers maybe down sometimes which will make this procs fail.</p>
 <p>Just wait a bit and try again. Stay calm ! Do not panic !</p>
@@ -1600,7 +1624,7 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 <dd>
 <p>showCurrentStocks</p>
 <p>callable display routine for currentStocks with stockstring passed in</p>
-<p>wide display style</p>
+<p>wide view</p>
 <pre class = "listing"><span class="Identifier">showCurrentStocks</span><span class="Punctuation">(</span><span class="StringLit">&quot;IBM+BP.L+0001.HK&quot;</span><span class="Punctuation">)</span>
 <span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">2</span><span class="Punctuation">)</span></pre><p>Note : Yahoo servers maybe down sometimes which will make this procs fail.</p>
 <p>Just wait a bit and try again. Stay calm ! Do not panic ! </p>
@@ -1611,7 +1635,7 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 <dd>
 <p>showCurrentSTX</p>
 <p>callable display routine for currentSTX with Portfolio object passed in</p>
-<p>compact display style</p>
+<p>compact view</p>
 <pre class = "listing"><span class="Identifier">showCurrentStocks</span><span class="Punctuation">(</span><span class="Identifier">myAccount</span><span class="Operator">.</span><span class="Identifier">pf</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span><span class="Punctuation">)</span></pre><p>This means get all stock codes of the first portfolio in myAccount</p>
 <p>Note : Yahoo servers maybe down sometimes which will make this procs fail.</p>
 <p>Just wait a bit and try again. Stay calm ! Do not panic !</p>
@@ -1922,7 +1946,7 @@ head means oldest rows
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-11-30 21:43:13 UTC</small>
+        <small>Made with Nim. Generated: 2015-12-01 16:32:09 UTC</small>
       </div>
     </div>
   </div>
